2005-06-06  Dave Malcolm  <dmalcolm@redhat.com>

	* cong-eel.h: 
	* cong-eel.c: 
	* cong-editor-node-entity-ref.c: 
	* cong-editor-node-entity-decl.c: 
	* cong-editor-area-structural.h: 
	* cong-editor-area-structural.c: 
	* cong-editor-area-structural-tag.c:
	Reworked structural heading to take a callback, rather than having hardcoded colours

2005-06-06  Dave Malcolm  <dmalcolm@redhat.com>

	* cong-editor-widget3.c: 
	* cong-editor-node-text.c: 
	* cong-document.c: 
	* cong-document-traversal.c: 
	* cong-dispspec-registry.c: 
	* cong-command.c: 
	* cong-command-history.c: 

	Removed some debug logging

2005-06-06  David Malcolm  <dmalcolm@redhat.com>

	* cong-file-properties.c: 

	Implemented word-count routine (#135093)

2005-05-17  David Malcolm  <dmalcolm@redhat.com>

	* cong-app.c: 

	Added --unit-test command-line option

2005-04-22  David Malcolm  <dmalcolm@redhat.com>

	* cong-document.c: 
	* cong-command.h: 
	* cong-command.c: 
	* cong-app.c: 

	More API documentation

2005-04-21  David Malcolm  <dmalcolm@redhat.com>

	* cong-document.c: 

	Added API documentation for cong_document_for_each_node

2005-04-14  David Malcolm  <dmalcolm@redhat.com>

	* plugin-random.c 
	* Makefile.am:
	* cong-random-document.c: 
	* cong-random-document.h: 
	Refactored bulk of plugin-random.c into new
	cong-random-document.[hc], in the hope of making it easier to run
	standalone for doing Yelp unit-testing	

2005-04-09  David Malcolm  <dmalcolm@redhat.com>

	* tree.c: 
	* popup.c: 
	* cong-ui-hooks.h: 
	* cong-editor-node-entity-ref.c: 
	* cong-editor-node-entity-decl.c: 
	First attempt at adding entity refactoring: convert an entity
	reference to a copy (via context menu)	

2005-04-08  David Malcolm  <dmalcolm@redhat.com>

	* plugin-debug.c: 
	Fix warning when plugin is disabled

2005-04-05  David Malcolm  <dmalcolm@redhat.com>

	* cong-util.h: 
	* cong-util.c: 
	Added various utility functions to make it easier to create XML
	files programatically.

	* plugin-debug.c: 